Make sure the high scores are always vertically aligned
When one scene had a "start over..." link, it's high scores would be
pushed a little futher down the page. Now, the <div> will always be
shown, even if there is no content, ensuring that the high scores are
always aligned vertically.

--- a/app/assets/stylesheets/pages/_root.sass
+++ b/app/assets/stylesheets/pages/_root.sass
@@ -110,7 +110,7 @@
       display: block
       font-size: 12px
       margin-bottom: -48px
-      padding: 10px 0 20px
+      padding: 10px 0
       text-transform: uppercase
 
       a
